--- a/SERVER/public/index.html
+++ b/SERVER/public/index.html
@@ -7,9 +7,8 @@
     <title>P5</title>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://cdnjs.cloudfare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
   </head>
-
   <body>
     <h1>Hola</h1>
     <script src="client.js"></script>
