--- a/SERVER/public/index.html
+++ b/SERVER/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>P5</title>
+    <title>Lienzo Compartido</title>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
   </head>
   <body>
-    <h1>Hola</h1>
+    <h1>Lienzo Compartido</h1>
     <script src="client.js"></script>
   </body>
 </html>
